<resources>
    <string name="app_name">SBDelivery</string>
    <string name="et_hint_e_mail">E-mail</string>
    <string name="et_hint_password">Пароль</string>
    <string name="et_hint_firstName">Имя</string>
    <string name="et_hint_lastName">Фамилия</string>
    <string name="btn_text_enter">Войти</string>
    <string name="btn_text_register">Регистрация</string>

    <!-- navigation drawer >-->
    <string name="home_page">Главная</string>
    <string name="menu_page">Меню</string>
    <string name="favorite_page">Избранное</string>
    <string name="basket_page">Корзина</string>
    <string name="profile_page">Профиль</string>
    <string name="orders_page">Заказы</string>
    <string name="notifications_page">Уведомления</string>

    <string name="navigation_drawer_open">Открыть панель навигации</string>
    <string name="navigation_drawer_close">Закрыть панель навигации</string>
    <string name="home_page_title">Главная</string>
    <string name="about_app">О приложении</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_text_entry">Вход</string>
    <string name="btn_text_to_register">Зарегистрироваться</string>
    <string name="btn_send">Отправить</string>
    <string name="text_enter_email_to_recover">Введите электронную почту, которую вы использовали при регистрации, и мы вышлем на нее код для восстановления пароля</string>
    <string name="et_hint_repeat_password">Повторите пароль</string>
    <string name="text_enter_new_password">Введите новый пароль</string>
    <string name="btn_save">Сохранить</string>

</resources>
