<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_page"
        android:title="@string/home_page"
        android:icon="@drawable/ic_home"/>
    <item
        android:id="@+id/menu_page"
        android:title="@string/menu_page"
        android:icon="@drawable/ic_menu"/>
    <item
        android:id="@+id/favorite_page"
        android:title="@string/favorite_page"
        android:icon="@drawable/ic_heart"/>
    <item
        android:id="@+id/basket_page"
        android:title="@string/basket_page"
        android:icon="@drawable/ic_shopping_cart_24px"/>
    <item
        android:id="@+id/profile_page"
        android:title="@string/profile_page"
        android:icon="@drawable/ic_profile"/>
    <item
        android:id="@+id/orders_page"
        android:title="@string/orders_page"
        android:icon="@drawable/ic_orders"/>
    <item
        android:id="@+id/notifications_page"
        android:title="@string/notifications_page"
        android:icon="@drawable/ic_bell"/>

</menu>