<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_enter_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:layout_marginBottom="@dimen/spacing_huge_32"
        android:layout_marginStart="@dimen/spacing_huge_32"
        android:text="@string/text_enter_new_password"
        android:textColor="@color/light_white"
        app:layout_constraintBottom_toTopOf="@+id/et_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_hint_password"
        android:theme="@style/AppTheme.EditTextTheme"
        android:layout_marginStart="@dimen/spacing_huge_32"
        android:layout_marginEnd="@dimen/spacing_huge_32"
        android:layout_marginBottom="@dimen/spacing_huge_32"
        app:layout_constraintBottom_toTopOf="@+id/et_repeat_password"
        app:layout_constraintTop_toBottomOf="@+id/tv_enter_new_password"
        tools:layout_editor_absoluteX="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_repeat_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_hint_repeat_password"
        android:theme="@style/AppTheme.EditTextTheme"
        android:layout_marginStart="@dimen/spacing_huge_32"
        android:layout_marginEnd="@dimen/spacing_huge_32"
        android:layout_marginBottom="@dimen/spacing_huge_32"
        app:layout_constraintBottom_toTopOf="@+id/btn_save"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        tools:layout_editor_absoluteX="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        style="@style/Button_Main"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/btn_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_repeat_password" />

</androidx.constraintlayout.widget.ConstraintLayout>