<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.register.RegistrationFragment"
    android:background="@drawable/ic_background">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_firstName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_huge_32"
        android:layout_marginEnd="@dimen/spacing_huge_32"
        android:layout_marginBottom="@dimen/spacing_normal_16"
        android:hint="@string/et_hint_firstName"
        android:theme="@style/AppTheme.EditTextTheme"
        app:layout_constraintBottom_toTopOf="@+id/et_lastName">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_lastName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_huge_32"
        android:layout_marginEnd="@dimen/spacing_huge_32"
        android:layout_marginBottom="@dimen/spacing_normal_16"
        android:hint="@string/et_hint_lastName"
        android:theme="@style/AppTheme.EditTextTheme"
        app:layout_constraintBottom_toTopOf="@+id/et_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_huge_32"
        android:layout_marginEnd="@dimen/spacing_huge_32"
        android:layout_marginBottom="@dimen/spacing_normal_16"
        android:hint="@string/et_hint_e_mail"
        android:theme="@style/AppTheme.EditTextTheme"
        app:layout_constraintBottom_toTopOf="@+id/et_password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_huge_32"
        android:layout_marginEnd="@dimen/spacing_huge_32"
        android:layout_marginBottom="@dimen/spacing_huge_32"
        android:layout_marginTop="@dimen/spacing_normal_16"
        android:hint="@string/et_hint_password"
        android:theme="@style/AppTheme.EditTextTheme"
        app:layout_constraintBottom_toTopOf="@+id/border_guideLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/border_guideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.6"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_to_register"
        style="@style/Button_Main"
        android:layout_marginTop="@dimen/spacing_huge_32"
        android:layout_marginBottom="@dimen/spacing_normal_16"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/btn_text_to_register"
        app:layout_constraintBottom_toTopOf="@+id/btn_entry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/border_guideLine"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_entry"
        style="@style/Button_Transparent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_text_entry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_to_register"
        app:rippleColor="@color/ripple_color"
        app:strokeColor="@color/white_transparent"
        app:strokeWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>